# motee-server

./: README.md  pyproject.toml
motee/: apps.py  device.py  key.py  media.py  message.py  net.py  server.py
motee/scope/: __init__.py  app.py  device.py  player.py
test/: __init__.py  scanner.py  test_discover.py  test_player.py
