[tool.poetry]
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
description = ""
name = "motee"
packages = [
  {include = "motee"},
]
version = "0.2.2"

[tool.poetry.dependencies]
dbus-python = "^1.2.16"
ewmh = "^0.1.6"
pillow = "^8.1.0"
psutil = "^5.8.0"
pynput = "^1.7.2"
python = "^3.8"
python-xlib = "^0.29"
scapy = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[tool.poetry.scripts]
motee = "motee.server:main"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
